--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "lyt_20201208",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --force",
+    "dev": "vite",
     "build": "vite build",
     "build:golocal": "vite build --mode golocal",
     "build:open": "vite build --mode open",
@@ -23,6 +23,7 @@
   "dependencies": {
     "@antv/g2plot": "^2.4.20",
     "@element-plus/icons-vue": "^2.0.9",
+    "@vueuse/core": "9.0.1",
     "axios": "^0.26.0",
     "clipboard": "^2.0.11",
     "codemirror": "^5.65.9",
